// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks/cargo-fmt converts buggy cargo-fmt 1`] = `
Object {
  "completed_at": Any<String>,
  "conclusion": "skipped",
  "head_sha": "11963e3cb7ecbb9247f638cc0fb047173a62cf7a",
  "name": "cargo-fmt",
  "output": Object {
    "summary": "",
    "title": "Unexpected cargo fmt output",
  },
  "status": "completed",
}
`;

exports[`checks/cargo-fmt converts failed cargo-fmt 1`] = `
Object {
  "completed_at": Any<String>,
  "conclusion": "failure",
  "head_sha": "11963e3cb7ecbb9247f638cc0fb047173a62cf7a",
  "name": "cargo-fmt",
  "output": Object {
    "annotations": Array [
      Object {
        "annotation_level": "failure",
        "end_line": 2,
        "message": "Original: 

pub fn bar(

)
{
    println!  (  \\"bar\\"  )  ;

Expected: pub fn bar() {
    println!(\\"bar\\");",
        "path": "/checks-test/src/foo/bar.rs",
        "raw_details": "{
    \\"original_begin_line\\": 1,
    \\"original_end_line\\": 7,
    \\"expected_begin_line\\": 1,
    \\"expected_end_line\\": 2,
    \\"original\\": \\"\\\\n\\\\npub fn bar(\\\\n\\\\n)\\\\n{\\\\n    println!  (  \\\\\\"bar\\\\\\"  )  ;\\",
    \\"expected\\": \\"pub fn bar() {\\\\n    println!(\\\\\\"bar\\\\\\");\\"
}",
        "start_line": 1,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 1,
        "message": "Original: 

mod bar
;


Expected: mod bar;",
        "path": "/checks-test/src/foo/mod.rs",
        "raw_details": "{
    \\"original_begin_line\\": 1,
    \\"original_end_line\\": 5,
    \\"expected_begin_line\\": 1,
    \\"expected_end_line\\": 1,
    \\"original\\": \\"\\\\n\\\\nmod bar\\\\n;\\\\n\\",
    \\"expected\\": \\"mod bar;\\"
}",
        "start_line": 1,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 9,
        "message": "Original: 

Expected: mod foo;",
        "path": "/checks-test/src/main.rs",
        "raw_details": "{
    \\"original_begin_line\\": 9,
    \\"original_end_line\\": 9,
    \\"expected_begin_line\\": 9,
    \\"expected_end_line\\": 9,
    \\"original\\": \\"\\",
    \\"expected\\": \\"mod foo;\\"
}",
        "start_line": 9,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 12,
        "message": "Original:  mod foo  ;

Expected: fn main() {
    let foo = foo();",
        "path": "/checks-test/src/main.rs",
        "raw_details": "{
    \\"original_begin_line\\": 10,
    \\"original_end_line\\": 10,
    \\"expected_begin_line\\": 11,
    \\"expected_end_line\\": 12,
    \\"original\\": \\" mod foo  ;\\",
    \\"expected\\": \\"fn main() {\\\\n    let foo = foo();\\"
}",
        "start_line": 10,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 14,
        "message": "Original: 
fn main()
{
      let foo = foo();


Expected: ",
        "path": "/checks-test/src/main.rs",
        "raw_details": "{
    \\"original_begin_line\\": 12,
    \\"original_end_line\\": 16,
    \\"expected_begin_line\\": 14,
    \\"expected_end_line\\": 14,
    \\"original\\": \\"\\\\nfn main()\\\\n{\\\\n      let foo = foo();\\\\n\\",
    \\"expected\\": \\"\\"
}",
        "start_line": 12,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 16,
        "message": "Original: 

Expected: ",
        "path": "/checks-test/src/main.rs",
        "raw_details": "{
    \\"original_begin_line\\": 19,
    \\"original_end_line\\": 19,
    \\"expected_begin_line\\": 16,
    \\"expected_end_line\\": 16,
    \\"original\\": \\"\\",
    \\"expected\\": \\"\\"
}",
        "start_line": 19,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 23,
        "message": "Original: 


Expected: ",
        "path": "/checks-test/src/main.rs",
        "raw_details": "{
    \\"original_begin_line\\": 27,
    \\"original_end_line\\": 28,
    \\"expected_begin_line\\": 23,
    \\"expected_end_line\\": 23,
    \\"original\\": \\"\\\\n\\",
    \\"expected\\": \\"\\"
}",
        "start_line": 27,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 32,
        "message": "Original: 

    if { let b = false; b } {}


Expected:     if {
        let b = false;
        b
    } {}",
        "path": "/checks-test/src/main.rs",
        "raw_details": "{
    \\"original_begin_line\\": 35,
    \\"original_end_line\\": 38,
    \\"expected_begin_line\\": 29,
    \\"expected_end_line\\": 32,
    \\"original\\": \\"\\\\n\\\\n    if { let b = false; b } {}\\\\n\\",
    \\"expected\\": \\"    if {\\\\n        let b = false;\\\\n        b\\\\n    } {}\\"
}",
        "start_line": 35,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 50,
        "message": "Original:     assert!(false);

Expected:         assert!(false);",
        "path": "/checks-test/src/main.rs",
        "raw_details": "{
    \\"original_begin_line\\": 56,
    \\"original_end_line\\": 56,
    \\"expected_begin_line\\": 50,
    \\"expected_end_line\\": 50,
    \\"original\\": \\"    assert!(false);\\",
    \\"expected\\": \\"        assert!(false);\\"
}",
        "start_line": 56,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 65,
        "message": "Original: 


Expected: ",
        "path": "/checks-test/src/main.rs",
        "raw_details": "{
    \\"original_begin_line\\": 71,
    \\"original_end_line\\": 72,
    \\"expected_begin_line\\": 65,
    \\"expected_end_line\\": 65,
    \\"original\\": \\"\\\\n\\",
    \\"expected\\": \\"\\"
}",
        "start_line": 71,
      },
      Object {
        "annotation_level": "failure",
        "end_line": 66,
        "message": "Original: 


Expected: ",
        "path": "/checks-test/src/main.rs",
        "raw_details": "{
    \\"original_begin_line\\": 74,
    \\"original_end_line\\": 75,
    \\"expected_begin_line\\": 66,
    \\"expected_end_line\\": 66,
    \\"original\\": \\"\\\\n\\",
    \\"expected\\": \\"\\"
}",
        "start_line": 74,
      },
    ],
    "summary": "Total of 11 issues",
    "title": "Total of 11 issues",
  },
  "status": "completed",
}
`;

exports[`checks/cargo-fmt converts successful cargo-fmt 1`] = `
Object {
  "completed_at": Any<String>,
  "conclusion": "success",
  "head_sha": "11963e3cb7ecbb9247f638cc0fb047173a62cf7a",
  "name": "cargo-fmt",
  "output": Object {
    "annotations": Array [],
    "summary": "Found no issues",
    "title": "Found no issues",
  },
  "status": "completed",
}
`;
